.k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deploy
  namespace: jor-website
  labels:
    app: website
spec:
  replicas: 3
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
        - name: website
          image: orummage/astroweb:1.0
          ports:
            - name: website
              containerPort: 80
